--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "A drop-in replacement for console.log with hierarchical namespaces and advanced filtering.",
   "private": false,
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "dev": "vitest",
     "test": "vitest run",
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "lint": "tsc",
-    "ci": "npm run lint && npm run test && npm run build",
+    "build": "rimraf dist && tsc --project tsconfig.dist.json",
+    "lint": "tsc --noEmit",
+    "ci": "npm run lint && npm run build && npm run test",
     "release": "npm run lint && npm run test && npm run build && changeset publish"
   },
   "keywords": [
@@ -29,6 +29,7 @@
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
+    "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
