--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "log-scope",
+  "name": "scope-log",
   "version": "1.0.0",
   "description": "A drop-in replacement for console.log with hierarchical namespaces and advanced filtering.",
   "private": false,
@@ -19,14 +19,14 @@
     "logging",
     "typescript"
   ],
-  "author": "Nic Strong ",
+  "author": "Nic Strong",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nicstrong/log-scope.git"
+    "url": "https://github.com/nicstrong/scope-log.git"
   },
-  "homepage": "https://github.com/nicstrong/log-scope#readme.md",
-  "bugs": "https://github.com/nicstrong/log-scope/issues",
+  "homepage": "https://github.com/nicstrong/scope-log#readme.md",
+  "bugs": "https://github.com/nicstrong/scope-log/issues",
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
