--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
