--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scope-log",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A drop-in replacement for console.log with hierarchical namespaces and advanced filtering.",
   "private": false,
   "main": "./dist/index.js",
@@ -11,8 +11,10 @@
     "test": "vitest run",
     "build": "rimraf dist && tsc --project tsconfig.dist.json",
     "lint": "tsc --noEmit",
-    "ci": "npm run lint && npm run build && npm run test",
-    "release": "npm run lint && npm run test && npm run build && changeset publish"
+    "release": "pnpm -r publish && changeset tag",
+    "version": "changeset version",
+    "ci:build": "pnpm run lint && pnpm run build && pnpm run test",
+    "ci:release": "pnpm run lint && pnpm run test && pnpm run build && changeset publish"
   },
   "keywords": [
     "browser",
